--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "mlflow>=3.3.0",
     "optuna>=4.5.0",
     "pillow>=11.3.0",
+    "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
